yolo integration to ncnn done

--- a/examples/yolo/CMakeLists.txt
+++ b/examples/yolo/CMakeLists.txt
@@ -7,5 +7,5 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR}/../../src)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-add_executable(yolo yolo.cpp region_layer.cpp)
+add_executable(yolo yolo.cpp)
 target_link_libraries(yolo ncnn ${OpenCV_LIBS})
