--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -140,6 +140,7 @@ ncnn_add_layer(DetectionOutput)
 ncnn_add_layer(Interp)
 ncnn_add_layer(DeconvolutionDepthWise)
 ncnn_add_layer(ShuffleChannel)
+ncnn_add_layer(Region)
 
 add_library(ncnn STATIC ${ncnn_SRCS})
 
